# VTubeRemote

./: .gitignore  Cargo.toml  LISCENCE  Rocket.toml
src/: benchmark.rs  change.rs  connection.rs  connection_state.rs  emote_info.rs  hotkey_state.rs  main.rs  request.rs  web.rs  web_example.rs
src/communication/: client_request.rs  mod.rs  server_event.rs
src/state/: mod.rs  vtube_state.rs  vtube_streams.rs
static/: animation.css  animation_script.js  emote_script.js  emote_template.html  index.html  list_arrow_script.js  list_arrow_template.html  script.js  scroll_script.js  style_script.js  styles.css  test.html
